2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* itk/configure: Regen to account for
	--enable-symbols fix.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/configure: Regen.
	* itcl/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.
	* itk/configure: Regen.
	* itk/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* tcl.m4 (SC_MAKE_LIB): Split up library link
	lines based on $host instead of $CC.
	* itcl/configure: Regen.
	* itk/configure: Regen.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* itcl/configure: Regen.
	* itcl/configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.
	* itk/configure: Regen.
	* itk/configure.in: Ditto.

2003-02-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* iwidgets3.0.0/configure: Regenerate to fix timestamp
	that was messed up by the import from sources.

2002-09-05  Keith Seitz  <keiths@redhat.com>

	* itk/Makefile.in (distclean): Remove pkgIndex.tcl and
	itkConfig.sh
	* itcl/Makefile.in (distclean): Remove pkgIndex.tcl and
	itclConfig.sh
	* iwidgets3.0.0/Makefile.in (distclean): Remove pkgIndex.tcl and
	iwidgets.tcl.
	* configure.in (subdirs): New variable. Don't put AC_CONFIG_SUBDIRS
	macro into configure.in twice: it confuses autoconf. Instead use
	the variable to hold the subdirs to be configured.
	* configure: Regenerated.

2002-09-04 Keith Seitz  <keiths@redhat.com> 

	From Chris Drexler  <ckolumbus@users.sourceforge.net>:
	* iwidgets3.0.0/doc/tk2html.perl:
	Change hard coded path name of perl so that
	rpm will not complain at install time.

2002-08-06  Keith Seitz  <keiths@redhat.com>

	From Mo Dejong  <supermo@bayarea.net>:
	* iwidgets3.0.0/Makefile.in: Don't create a symlink
	from $(SCRIPT_INSTALL_DIR) to $(LIB_INSTALL_DIR)/iwidgets.
	Remove LN_S and LIB_INSTALL_DIR variables.
